# EthGlobalDelhi

./: .gitignore  Dockerfile  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: devcontainer.json
circuits/: .Makefile  .gitignore  README.md  package.json
circuits/circuit-wasm-pom/: .gitignore  Cargo.toml  IncrementalMerkleTree.circom  circuit.circom  circuit.input.json  circuit.test.proof.json
circuits/circuit-wasm-pom/pkg/: circuit_wasm_pom.js  package.json
circuits/circuit-wasm-pom/src/: lib.rs
contracts/: .gitignore  Makefile  README.md  contracts-deployed-polygon_amoy.json  contracts-deployed.json  hardhat.config.ts  package.json  tsconfig.json
contracts/abis/: Clones.json  Event.json  Example.json  Groth16Verifier.json  IEventContract.json  Poseidon2.json  Registry.json  TestIMTPoseidon.json
contracts/contracts/: Clones.sol  Empty.sol  Event.sol  Groth16Verifier.sol  Registry.sol
contracts/contracts/IMT/: IMTPoseidon.sol  Poseidon2.sol  TestIMT.sol
contracts/tasks/: compile.ts  deploy.ts  gen_verifier.ts
contracts/test/: IMTPoseidon.ts  Registry.ts
web/: README.md  middleware.ts  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx
web/src/app/: layout.tsx  page.tsx
web/src/app/address/: page.tsx
web/src/components/: ProtectedRoute.tsx  WasmComponent.tsx
web/src/lib/: registry.ts  utils.ts
web/src/pkg/: circuit_wasm_pom.d.ts  circuit_wasm_pom.js  circuit_wasm_pom_bg.wasm.d.ts
web/src/store/: useAuthStore.ts
x402-server/: package-lock.json  package.json  server.js
(+13 files in other folders)
