[package]
name = "circuit-wasm-pom"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true          # Full LTO - best optimization
opt-level = 3       # Optimize for speed
codegen-units = 1   # Better optimization, slower builds
debug = "line-tables-only"

[features]
default = []
rayon = [
    "dep:rayon",
    "wasm-bindgen-rayon"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
rayon = { version = "1.8", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }
circom-prover = { path = "../mopro/circom-prover", default-features = false, features = ["ark-circom-witnesscalc"] }

getrandom_v2 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.18", features = ["v4", "js"] }
